--- a/apps/base/podinfo/release.yaml
+++ b/apps/base/podinfo/release.yaml
@@ -21,6 +21,8 @@ spec:
   values:
     cache: tcp://redis-master.redis:6379
     ingress:
-      enabled: true
+      enabled: false
       annotations:
         kubernetes.io/ingress.class: nginx
+    service:
+      type: LoadBalancer
