--- a/apps/base/podinfo/release.yaml
+++ b/apps/base/podinfo/release.yaml
@@ -26,3 +26,5 @@ spec:
         kubernetes.io/ingress.class: nginx
     service:
       type: LoadBalancer
+      externalIPs:
+      - 192.168.100.100
