--- a/infrastructure/ingress.yaml
+++ b/infrastructure/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: http-ingress
+  name: podinfo-ingress
   namespace: podinfo
 spec:
   rules:
