--- a/infrastructure/redis/kustomization.yaml
+++ b/infrastructure/redis/kustomization.yaml
@@ -4,6 +4,7 @@ namespace: redis
 resources:
   - namespace.yaml
   - release.yaml
+  - namespace2.yaml
 configMapGenerator:
   - name: redis-values
     files:
