--- a/apps/base/podinfo/release.yaml
+++ b/apps/base/podinfo/release.yaml
@@ -24,7 +24,7 @@ spec:
       enabled: false
       annotations:
         kubernetes.io/ingress.class: nginx
-#     service:
-#       type: LoadBalancer
+    service:
+      type: NodePort
 #       externalIPs:
 #       - 192.168.100.100
