add netbox release

--- a/apps/base/mynetbox/gitrepo.yaml
+++ b/apps/base/mynetbox/gitrepo.yaml
@@ -1,10 +1,10 @@
-apiVersion: source.toolkit.fluxcd.io/v1beta2
-kind: GitRepository
-metadata:
-  name: netbox
-  namespace: netbox
-spec:
-  interval: 1m
-  url: https://github.com/bootc/netbox-chart
-  ref:
-    branch: master
+# apiVersion: source.toolkit.fluxcd.io/v1beta2
+# kind: GitRepository
+# metadata:
+#   name: netbox
+#   namespace: netbox
+# spec:
+#   interval: 1m
+#   url: https://github.com/bootc/netbox-chart
+#   ref:
+#     branch: master
